<resources>
    <string name="app_name">Movie note</string>
    <string name="title_movies">Movies</string>
    <string name="title_tv_shows">Tv Shows</string>
    <string name="title_celebrities">Celebrities</string>
    <string name="title_profile">Profile</string>
    <string name="title_movies_list">Movies list</string>
    <string name="popular">Popular</string>
    <string name="playing_in_theathres">Playing In Theatres</string>
    <string name="trending">Trending</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="see_all">See All</string>
    <string name="title_notes">Notes</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name_upper">MOVINOTES</string>
    <string name="log_in_top_text">Log In to your profile to have access to MOVINOTES on all your devices</string>
</resources>