<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_theaters_24px"
        android:title="@string/title_movies" />

    <item
        android:id="@+id/navigation_tv_shows"
        android:icon="@drawable/ic_tv_show_24px"
        android:title="@string/title_tv_shows" />

    <item
        android:id="@+id/navigation_celebrities"
        android:icon="@drawable/ic_celebrities_24px"
        android:title="@string/title_celebrities" />

    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/ic_note_24px"
        android:title="@string/title_notes" />

    <item
        android:id="@+id/navigation_tmdb"
        android:icon="@drawable/ic_profile_24px"
        android:title="@string/title_tmdb" />

</menu>