<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.best.movie.note.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies">
        <action
            android:id="@+id/action_navigation_movies_to_navigation_movies_list"
            app:destination="@id/navigation_movies_list">
            <argument
                android:name="movies_id"
                android:defaultValue="0" />
        </action>
        <action
            android:id="@+id/action_navigation_movies_to_mainMovieFragment"
            app:destination="@id/mainMovieFragment"
            app:popUpTo="@id/mainMovieFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_tv_shows"
        android:name="com.best.movie.note.ui.tvshows.TvShowsFragment"
        android:label="@string/title_tv_shows"
        tools:layout="@layout/fragment_tv_shows">
        <action
            android:id="@+id/action_navigation_tv_shows_to_mainMovieFragment"
            app:destination="@id/mainMovieFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_celebrities"
        android:name="com.best.movie.note.ui.favorite.FavoritesFragment"
        android:label="@string/title_celebrities"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.best.movie.note.ui.notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes"

        />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.best.movie.note.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_signInFragment"
            app:destination="@id/signInFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_movies_list"
        android:name="com.best.movie.note.ui.common.list.movies.MoviesListFragment"
        android:label="@string/title_movies_list"
        tools:layout="@layout/movies_list_fragment">
        <argument
            android:name="what_open"
            android:defaultValue="popular"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_movies_list_to_mainMovieFragment"
            app:destination="@id/mainMovieFragment" />
    </fragment>
    <fragment
        android:id="@+id/mainMovieFragment"
        android:name="com.best.movie.note.ui.common.details.movie.MovieDetailsFragment"
        android:label="main_movie_fragment"
        tools:layout="@layout/movie_details_fragment">
        <action
            android:id="@+id/action_mainMovieFragment_self"
            app:destination="@id/mainMovieFragment" />
        <action
            android:id="@+id/action_mainMovieFragment_to_celebrityDetailsFragment"
            app:destination="@id/celebrityDetailsFragment" />
        <action
            android:id="@+id/action_mainMovieFragment_to_seasonDetailsFragment"
            app:destination="@id/seasonDetailsFragment" />
        <action
            android:id="@+id/action_mainMovieFragment_to_noteFragment"
            app:destination="@id/noteFragment" />
    </fragment>
    <fragment
        android:id="@+id/celebrityDetailsFragment"
        android:name="com.best.movie.note.ui.common.details.cast.CelebrityDetailsFragment"
        android:label="CelebrityDetailsFragment">
        <argument
            android:name="cast_id"
            android:defaultValue="0"
            app:argType="integer" />
        <argument
            android:name="cast_name"
            android:defaultValue="empty name"
            app:argType="string" />
        <action
            android:id="@+id/action_celebrityDetailsFragment_to_mainMovieFragment"
            app:destination="@id/mainMovieFragment" />
    </fragment>
    <fragment
        android:id="@+id/seasonDetailsFragment"
        android:name="com.best.movie.note.ui.common.details.season.SeasonDetailsFragment"
        android:label="SeasonDetailsFragment" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.best.movie.note.ui.signup.SignInFragment"
        android:label="SignInFragment">
        <action
            android:id="@+id/action_signInFragment_to_navigation_profile"
            app:destination="@id/navigation_profile"
            app:launchSingleTop="true"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/noteFragment"
        android:name="com.best.movie.note.ui.note.NoteFragment"
        android:label="note_fragment"
        tools:layout="@layout/note_fragment" />
</navigation>