<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="buttonHandler"
            type="com.best.movie.note.ui.movies.MoviesFragment.MoviesFragmentButtonsHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.movies.MoviesFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.movies.MoviesFragment">

                <TextView
                    android:id="@+id/popularTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:text="@string/popular"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/popularSeeAllButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/popularSeeAllButton" />

                <Button
                    android:id="@+id/popularSeeAllButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_arrow_right_24"
                    android:drawablePadding="3dp"
                    android:onClick="@{buttonHandler::popularSeeAll}"
                    android:text="@string/see_all"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popularRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/popularTextView"
                    tools:listitem="@layout/movie_vertical_item" />

                <TextView
                    android:id="@+id/playingInTheatresTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:text="@string/playing_in_theathres"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/playingInTheatresSeeAllButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/playingInTheatresSeeAllButton" />

                <Button
                    android:id="@+id/playingInTheatresSeeAllButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_arrow_right_24"
                    android:drawablePadding="3dp"
                    android:onClick="@{buttonHandler.nowPlayingSeeAll}"
                    android:text="@string/see_all"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popularRecyclerView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/playingInTheatresRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/playingInTheatresTextView"
                    tools:layout_editor_absoluteX="-16dp"
                    tools:listitem="@layout/movie_horizontal_item" />

                <TextView
                    android:id="@+id/trendingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:text="@string/trending"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/trendingSeeAllButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/trendingSeeAllButton" />

                <Button
                    android:id="@+id/trendingSeeAllButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_arrow_right_24"
                    android:drawablePadding="3dp"
                    android:onClick="@{buttonHandler.trendingSeeAll}"
                    android:text="@string/see_all"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/playingInTheatresRecyclerView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trendingRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/trendingTextView"
                    tools:listitem="@layout/movie_vertical_item" />

                <TextView
                    android:id="@+id/topRatedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:text="@string/top_rated"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/topRatedSeeAllButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/topRatedSeeAllButton" />

                <Button
                    android:id="@+id/topRatedSeeAllButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_arrow_right_24"
                    android:drawablePadding="3dp"
                    android:onClick="@{buttonHandler.topRatedSeeAll}"
                    android:text="@string/see_all"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/trendingRecyclerView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/topRatedRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/topRatedSeeAllButton"
                    tools:listitem="@layout/movie_horizontal_small_item" />

                <TextView
                    android:id="@+id/upComingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:text="@string/upcoming"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/upComingSeeAllButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/upComingSeeAllButton" />

                <Button
                    android:id="@+id/upComingSeeAllButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_arrow_right_24"
                    android:drawablePadding="3dp"
                    android:text="@string/see_all"
                    android:textAllCaps="false"
                    android:onClick="@{buttonHandler.upComingSeeAll}"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/topRatedRecyclerView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/upComingRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    android:onClick="@{buttonHandler.upComingSeeAll}"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/upComingSeeAllButton"
                    tools:listitem="@layout/movie_vertical_item" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


